OCLOMRS-330: Prevent the Footer and the Login form from overlapping (#330) (#241)

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,7 +1,7 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  height: 30vh;
+  margin-bottom: 1em;
   justify-content: center;
   align-items: center;
 }
